more unification of links as buttons and fix psa padding on mobile

--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -8,4 +8,7 @@
 
 .button {
   @include button();
+  &:hover {
+    text-decoration: underline !important;
+  }
 }
