--- a/src/components/care-actions/_care-actions.scss
+++ b/src/components/care-actions/_care-actions.scss
@@ -206,15 +206,16 @@
 }
 .care-actions-secondary-list {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   list-style: none;
   margin: 0 0 0.75rem;
   padding: 0;
-  &-button {
-    @include button();
-    display: inline-block;
-    margin: 0 0.625rem 0.625rem 0; // 10px
-    text-decoration: none;
+  @include respond-to(tablet) {
+    flex-direction: row;
+  }
+  .button {
+    margin-bottom: 0.625rem;
   }
 }
 
